--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
-    
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "ngrok": "^5.0.0-beta.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
