--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
+  "@supabase/supabase-js": "^2.46.1",
+  "@supabase/ssr": "^0.5.2",
+  "axios": "^1.7.7",
     
     "next": "15.3.3",
     "ngrok": "^5.0.0-beta.2",
