--- a/env.example
+++ b/env.example
@@ -14,3 +14,7 @@ NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=gitam.edu
 
 # Comma-separated list of admin emails (server-only check in finalize route)
 ALLOWLIST_ADMINS=
+
+# Email configuration for contact form
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
